compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__generic_record_update.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub type Box(a) {\n            Box(value: a, i: Int)\n        };\n        pub fn update_box(box: Box(a), value: b) {\n            Box(..box, value: value)\n        };"

---

error: Type mismatch
  ┌─ /src/one/two.gleam:6:31
  │
6 │             Box(..box, value: value)
  │                               ^^^^^

Expected type:

    a

Found type:

    b


